== 2.2 / YYYY-MM-DD
* Clarified contribution guidelines for MIME types. Resolves
  {#57}[https://github.com/halostatue/mime-types/issues/57].

== 2.1 / 2014-01-25

* API Changes (MIME::Type):
  * Added MIME::Type#xrefs and MIME::Type#xref_urls that have better handling
    of types of reference information. MIME::Type#references= has been
    deprecated. In a future release, both MIME::Type#references will be turned
    into a short-hand view on MIME::Type#xrefs, MIME::Type#urls will be an
    alias for MIME::Type#xref_urls, and MIME::Type#references= will be removed.
* New or Updated MIME Types:
  * This information is now tracked in History-Types.rdoc.
* MIME Type Development Tools
  * The IANA registry format changed, breaking the IANA registry tool
    previously used. Rewrote IANADownloader and IANADownloader::Parser as
    IANARegistryParser using the XML form.
  * The LTSW list has been dropped as it has not been updated since 2002.
  * The default Apache MIME types configuration list is now used to enrich MIME
    type data with additional extension information.

== 2.0 / 2013-10-27

* API Changes (General):
  * mime-types is no longer compatible with Ruby 1.8. Additionally, for its
    YAML operations (normally development and test), it requires a YAML parser
    that conforms to the Psych parser, not the Syck parser. This would only be
    a problem with an alternative Ruby 1.9.2 interpreter that does not
    implement the Psych parser conventions by requiring +psych+.
  * MIME::InvalidContentType has been renamed to
    MIME::Type::InvalidContentType.
* API Changes (MIME::Type):
  * Construction of a MIME::Type can be with any of the following objects:
    * An array containing a valid content type identifier and an optional array
      of extensions. This allows MIME::Type.new to be used instead of
      MIME::Type.from_array for the most common use-case. Fixes #43.
      https://github.com/halostatue/mime-types/pull/43