@@ -1,6 +1,10 @@
 == 2.2 / YYYY-MM-DD
+
 * Clarified contribution guidelines for MIME types. Resolves
   {#57}[https://github.com/halostatue/mime-types/issues/57].
+* Fixed a small bug where deprecated methods would warn of deprecation when
+  called by internal methods. Resolves
+  {#60}[https://github.com/halostatue/mime-types/issues/60].
 
 == 2.1 / 2014-01-25
 
